mysql vs django 資料庫語法比較

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
         <nav class="navbar">
             <a href="#home">最新消息</a>
             <a href="#category">景點介紹</a>
-            <a href="#menu">菜單</a>
+            <a href="#menu">產品購買</a>
             <a href="#gallery">美食圖片</a>
             <a href="#review">評論</a>
             <a href="#order">訂購</a>
