--- a/templates/base.html
+++ b/templates/base.html
@@ -20,9 +20,9 @@
         <!-- RWD Menu Bar -->
         <div id="menu-bar" class="fas fa-bars"></div>
         <nav class="navbar">
-            <a href="#home">最新消息</a>
-            <a href="#category">景點介紹</a>
-            <a href="#menu">產品購買</a>
+            <a href="/news/">最新消息</a>
+            <a href="/travel/">景點介紹</a>
+            <a href="/product/">產品購買</a>
             <a href="#gallery">美食圖片</a>
             <a href="#review">評論</a>
             <a href="#order">訂購</a>
