member app: register OK

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
             <a href="/product/">產品購買</a>
             <a href="#gallery">美食圖片</a>
             <a href="#review">評論</a>
-            <a href="#order">訂購</a>
+            <a href="/contact/">聯絡我們</a>
         </nav>
     </header>
     {% block Adarea %}
