--- a/templates/base.html
+++ b/templates/base.html
@@ -16,16 +16,23 @@
 <body>
     <!-- header -->
     <header>
-        <a href="#" class="logo"><img src="../static/images/rice_logo.png" alt="">巷弄稻香</a>
+        <a href="/" class="logo"><img src="../static/images/rice_logo.png" alt="">巷弄稻香</a>
         <!-- RWD Menu Bar -->
         <div id="menu-bar" class="fas fa-bars"></div>
         <nav class="navbar">
             <a href="/news/">最新消息</a>
             <a href="/travel/">景點介紹</a>
             <a href="/product/">產品購買</a>
-            <a href="#gallery">美食圖片</a>
-            <a href="#review">評論</a>
             <a href="/contact/">聯絡我們</a>
+            {% if request.session.isAlive %}
+                <a href="#">會員管理</a>
+                <a href="#">購物車</a>
+                <a href="#">訂單管理</a>
+                <a href="/logout">登出</a>
+            {% else %}
+                <a href="/login">登入</a>
+                <a href="/register">註冊</a>
+            {% endif %}
         </nav>
     </header>
     {% block Adarea %}
