--- a/templates/product.html
+++ b/templates/product.html
@@ -23,6 +23,8 @@
             <span>NT:$ {{row.price}}</span>
             <br/>
             <span>{{row.created_date}}</span>
+            <br />
+            <a href="/addtocart/add/{{row.id}}">加入購物車</a>
         </div>
     {% endfor %}
 </div>
