--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
             <a href="/product/">產品購買</a>
             <a href="/contact/">聯絡我們</a>
             {% if request.session.isAlive %}
-                <a href="#">會員管理</a>
+                <a href="/changepassword">會員管理</a>
                 <a href="#">購物車</a>
                 <a href="#">訂單管理</a>
                 <a href="/logout">登出</a>
