--- a/templates/base.html
+++ b/templates/base.html
@@ -26,8 +26,8 @@
             <a href="/contact/">聯絡我們</a>
             {% if request.session.isAlive %}
                 <a href="/changepassword">會員管理</a>
-                <a href="#">購物車</a>
-                <a href="#">訂單管理</a>
+                <a href="/cart/">購物車</a>
+                <a href="/cartorder/">訂單管理</a>
                 <a href="/logout">登出</a>
             {% else %}
                 <a href="/login">登入</a>
