--- a/templates/photos.html
+++ b/templates/photos.html
@@ -8,47 +8,49 @@
 
 {% block content %}
 
-<div style="margin: top 150px;"></div>
-<h1>圖片區</h1>
+<div class="photo_container">
+    <h1>圖片區</h1>
+    <div class="photo_div">
 <!-- 
     在表單中若要上傳檔案，一定要在form 表單中的屬性加上: enctype = "multipart/form-data"
     才可以上傳檔案，不然會fail
  -->
-<form action="" method="post" enctype="multipart/form-data">
-    {% csrf_token %}
+    <form action="" method="post" enctype="multipart/form-data">
+        
+        {% csrf_token %}
 
-    <div class="form-row">
-        <div class="form-group col-md-4">
-        </div>
-        <div class="form-group col-md-4">
-            {{form.image}}
-        </div>
-        <div class="form-group col-md-4">
-        </div>
-    </div>
-
-    <div class="form-row">
-        <div class="form-group col-md-4">
-        </div>
-        <div class="form-group col-md-4">
-            <input type="submit" value="上傳" class="btn btn-primary" />
-        </div>
-        <div class="form-group col-md-4">
-        </div>
-    </div>
-</form>
-<!-- 顯示藥片 -->
-<div class="row">
-    {% for photo in photos %}
-        {% if photo.image %}
-            <div class="col-md-4">
-                <div>
-                    <div src="{{photo.image.url}}" class="img-top"></div>
-                </div>
+        <div class="form-row">
+            <div class="form-group col-md-4">
             </div>
-        {% endif %}
-    {% endfor %}
+            <div class="form-group col-md-4">
+                {{form.image}}
+            </div>
+            <div class="form-group col-md-4">
+            </div>
+        </div>
+
+        <div class="form-row">
+            <div class="form-group col-md-4">
+            </div>
+            <div class="form-group col-md-4">
+                <input type="submit" value="上傳" class="btn btn-primary" />
+            </div>
+            <div class="form-group col-md-4">
+            </div>
+        </div>
+    </form>
+<!-- 顯示藥片 -->
+    <div class="row">
+        {% for photo in photos %}
+            {% if photo.image %}
+                <div class="col-md-4">
+                    <div>
+                        <img src="{{photo.image.url}}" class="img-top">
+                    </div>
+                </div>
+            {% endif %}
+        {% endfor %}
+    </div>
+    </div>
 </div>
-
-
 {% endblock %}
